<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/apt_background"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="30dp"
        android:hint="@string/email_hint"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/emailField"
        android:layout_alignEnd="@+id/userLogin" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/admin_login_button_label"

        android:layout_marginLeft="30dp"
        android:background="@drawable/button_bg3"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/tenant_login_button_label"
        android:id="@+id/userLogin"
        android:layout_alignTop="@+id/loginButton"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_bg3"
        android:layout_alignBottom="@+id/loginButton" />




</RelativeLayout>